--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -17,7 +17,7 @@ title: IEDC Reverse Classroom for ML
 tagline: ''
 description: ''
 author: IEDC ML Team
-baseurl: 'Reverse-Classroom-ML' # the subpath of your site, e.g. /blog
+baseurl: '/Reverse-Classroom-ML' # the subpath of your site, e.g. /blog
 url: '' # the base hostname & protocol for your site, e.g. http://example.com
 exclude: ["Gemfile", "Gemfile.lock", "LICENSE", "README.md", "vendor/bundle", "vendor/cache", "vendor/gems", "vendor/ruby",
           "docker-compose.yml", "Procfile"]
