--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,7 +18,7 @@ tagline: ''
 description: ''
 author: IEDC ML Team
 baseurl: '/Reverse-Classroom-ML' # the subpath of your site, e.g. /blog
-url: '' # the base hostname & protocol for your site, e.g. http://example.com
+url: 'https://dipan29.github.io' # the base hostname & protocol for your site, e.g. http://example.com
 exclude: ["Gemfile", "Gemfile.lock", "LICENSE", "README.md", "vendor/bundle", "vendor/cache", "vendor/gems", "vendor/ruby",
           "docker-compose.yml", "Procfile"]
 
