--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,14 +16,13 @@
 title: IEDC Reverse Classroom for ML
 tagline: ''
 description: ''
-author: IEDC ML Team
+author: Kevin Lin
 baseurl: '/Reverse-Classroom-ML' # the subpath of your site, e.g. /blog
 url: 'https://iedc-iem.github.io' # the base hostname & protocol for your site, e.g. http://example.com
-exclude: ["Gemfile", "Gemfile.lock", "LICENSE", "README.md", "vendor/bundle", "vendor/cache", "vendor/gems", "vendor/ruby",
-          "docker-compose.yml", "Procfile"]
+exclude: ["Gemfile", "Gemfile.lock", "LICENSE", "README.md", "docker-compose.yml"]
 
 # Theme settings
-remote_theme: pmarsceill/just-the-docs@v0.3.3
+remote_theme: pdmosses/just-the-docs@pages-and-collections
 color_scheme: light
 search_enabled: true
 heading_anchors: true
@@ -31,7 +30,6 @@ permalink: pretty
 aux_links:
   IEDC IEM:
     - 'http://iedc.iemecell.com'
-footer_content:
 aux_links_new_tab: true
 footer_content: 'Deeptendu Santra &copy; 2021 <a rel="license" href="https://github.com/IEDC-IEM/Reverse-Classroom-ML/blob/main/LICENSE">Modified M.I.T. License</a>'
 
@@ -39,7 +37,10 @@ footer_content: 'Deeptendu Santra &copy; 2021 <a rel="license" href="https://git
 collections:
   staffers:
   modules:
-    lessons:
+  # slides:
+  #   permalink: '/:path/'
+  #   output: true
+  lessons:
     permalink: '/:path/'
     output: true
 # Default layouts for each collection type
@@ -59,10 +60,11 @@ defaults:
       type: lessons
     values:
       layout: page
-# just_the_docs:
-#   collections:
-#     lessons:
-#       name: Lessons
+# Configure collections for Just the Docs
+just_the_docs:
+  collections:
+    lessons:
+      name: Topics
 
 compress_html:
   clippings: all
